# take-home-project

./: Makefile  README.md  pyproject.toml
bonus/ai-takeover/: Dockerfile.attacker  Dockerfile.target  attack_script.py  docker-compose.yml  script.py
bonus/nuke/: Dockerfile.attacker  attack.sh  docker-compose.yml
src/: main.py
src/tests/: test_main_pytest.py
